fix: Fix a few minor runtime issues