@@ -93,7 +93,7 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 				<configuration>
-					<jvmArguments>--enable-native-access=ALL-UNNAMED</jvmArguments>
+					<jvmArguments>--add-reads wolpi=ALL-UNNAMED --enable-native-access=app.photofox.vipsffm</jvmArguments>
 				</configuration>
 			</plugin>
 			<plugin>
